--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,401 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fascinate&display=swap");
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #2D4263;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
 }
+
+.movie-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 6rem 2.5rem;
+  width: 75%;
+  margin: 9.5rem auto 2rem auto;
+  padding: 2rem;
+  background-color: rgba(26, 26, 46, 0.1);
+  border-radius: 8px;
+  position: relative;
+}
+
+.movie-container a {
+  text-decoration: none;
+  color: #ccc;
+}
+
+.movie-container .category {
+  position: absolute;
+  top: -70px;
+  left: 40px;
+  color: #ccc;
+  font-size: 22px;
+}
+
+.movie-container hr {
+  position: absolute;
+  top: -20px;
+  left: 30px;
+  width: 95%;
+  border: 2px solid #1A1A2E;
+  border-radius: 5px;
+}
+
+.myList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 230px;
+  position: absolute;
+  top: 6rem;
+  right: 8.4%;
+}
+
+.myList a {
+  cursor: pointer;
+  z-index: 55;
+  text-decoration: none;
+  background-color: #1A1A2E;
+  color: #ccc;
+  font-size: 15px;
+  font-weight: bold;
+  padding: .4rem 1rem;
+  border-radius: 5px;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+.myList a:hover {
+  background-color: #ccc;
+  color: #1A1A2E;
+  -webkit-box-shadow: 4px 4px 6px #1A1A2E;
+          box-shadow: 4px 4px 6px #1A1A2E;
+}
+
+@media screen and (max-width: 750px) {
+  .category {
+    position: absolute;
+    top: -30px;
+    right: 60%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 160px;
+  }
+  .myList {
+    top: 8rem;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
+    z-index: 55;
+  }
+  .myList a {
+    background-color: #2D4263;
+  }
+  .movie-container {
+    margin-top: 16rem;
+  }
+  .movie-container hr {
+    left: 30px;
+    width: 82%;
+    border: 2px solid #1A1A2E;
+    border-radius: 5px;
+  }
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #1A1A2E;
+  padding: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+header .home-link {
+  position: relative;
+  margin-left: 150px;
+  padding: 0 20px;
+  height: 50px;
+  color: white;
+  background-color: #2D4263;
+  font-size: 40px;
+  border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+
+header .home-link span {
+  font-size: 20px;
+  margin-left: 5px;
+  font-family: 'Fascinate', cursive;
+  letter-spacing: 2px;
+}
+
+@media only screen and (max-width: 750px) {
+  header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-bottom: 2rem;
+  }
+  header .home-link {
+    margin: 0 auto;
+    background-color: darkred;
+  }
+}
+
+.change-scroll-bg {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 20;
+  background-color: rgba(26, 26, 46, 0.9);
+}
+
+.details {
+  background-color: rgba(26, 26, 46, 0.2);
+  border-radius: 10px;
+  width: 70%;
+  height: 70vh;
+  margin: 8.5% auto 5% auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 1000px) {
+  .details {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    overflow: hidden;
+  }
+  .content {
+    margin: 0 auto;
+    min-width: 80%;
+  }
+  .index {
+    margin-bottom: 11rem;
+  }
+}
+
+.movie_image {
+  -webkit-box-shadow: 10px 0px 6px rgba(26, 26, 46, 0.8);
+          box-shadow: 10px 0px 6px rgba(26, 26, 46, 0.8);
+}
+
+.content {
+  width: 60%;
+  padding: 25px;
+  margin-right: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.info h2 {
+  margin-right: 50px;
+  letter-spacing: 1.8px;
+  font-size: 25px;
+  color: #eee;
+}
+
+.info h4 {
+  margin-top: -20px;
+  letter-spacing: 1.8px;
+  font-size: 15px;
+  color: #aaa;
+}
+
+.info p {
+  color: #ccc;
+  letter-spacing: 1.5px;
+  font-size: 16px;
+  margin-top: 60px;
+}
+
+.index {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-top: auto;
+  gap: 2rem;
+  text-align: center;
+  height: 70px;
+}
+
+.index small {
+  height: 60px;
+  line-height: 30px;
+  color: #aaa;
+  letter-spacing: 1px;
+}
+
+.index span {
+  padding: 6px 8px;
+  border-radius: 5px;
+  -webkit-box-shadow: 3px 3px 4px rgba(26, 26, 46, 0.6);
+          box-shadow: 3px 3px 4px rgba(26, 26, 46, 0.6);
+  font-size: 15px;
+  background-color: rgba(26, 26, 46, 0.8);
+  color: #ddd;
+}
+
+@media screen and (max-width: 1200px) {
+  .index {
+    display: block;
+    margin-top: -10px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .index small {
+    display: block;
+  }
+  .details {
+    margin: 18% auto auto;
+    overflow-y: scroll;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .index {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    gap: .5rem;
+    text-align: left;
+    margin-top: 20px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .details {
+    margin: 13% auto auto;
+  }
+}
+
+@media screen and (max-width: 1700px) {
+  header {
+    padding: .5rem;
+  }
+  .myList {
+    top: 6.25rem;
+  }
+}
+
+.watch-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: .5rem .3rem;
+  background-color: #1A1A2E;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  -webkit-box-shadow: 5px 5px 10px #1A1A2E;
+          box-shadow: 5px 5px 10px #1A1A2E;
+}
+
+.watchlist-btn {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 5px;
+  border: none;
+  padding: .5rem 1rem;
+  border-radius: 3px;
+  color: #ccc;
+  font-size: 15px;
+  font-weight: bold;
+  background-color: #1A1A2E;
+  -webkit-transition: all ease .2s;
+  transition: all ease .2s;
+}
+
+.watchlist-btn:hover {
+  background-color: #ccc;
+  color: #1A1A2E;
+}
+
+.watchlist-btn-disabled {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 5px;
+  border: none;
+  padding: .5rem 1rem;
+  border-radius: 3px;
+  color: #1A1A2E;
+  font-size: 15px;
+  font-weight: bold;
+  background-color: transparent;
+  color: rgba(150, 150, 150, 0.521);
+  -webkit-transition: all ease .2s;
+  transition: all ease .2s;
+}
+
+.count-movie {
+  position: absolute;
+  top: -2rem;
+  right: 1rem;
+  margin-top: 2.2rem;
+  color: #ccc;
+  font-size: 18px;
+}
+/*# sourceMappingURL=index.css.map */
